[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Background.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Squareframes.tres" type="SpriteFrames" id=6]
[ext_resource path="res://Assets/Images/WhiteBG.png" type="Texture" id=7]

[node name="Background" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": "Background Autocorrects to fit screen. DO NOT CHANGE POSITIONS."
}

[node name="Canvas" type="CanvasLayer" parent="."]
layer = 0

[node name="CenterContainer" type="CenterContainer" parent="Canvas"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -480.0
margin_top = -270.0
margin_right = 480.0
margin_bottom = 270.0
size_flags_horizontal = 3
size_flags_vertical = 3
use_top_left = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="SpriteHue" type="Sprite" parent="Canvas/CenterContainer"]
texture = ExtResource( 7 )
centered = false

[node name="SpriteWhite" type="Sprite" parent="Canvas/CenterContainer"]
modulate = Color( 1, 1, 1, 0.352941 )
texture = ExtResource( 7 )
centered = false

[node name="AnimatedSpriteSquare" type="AnimatedSprite" parent="Canvas/CenterContainer"]
self_modulate = Color( 1, 1, 1, 0.501961 )
scale = Vector2( 10, 10 )
frames = ExtResource( 6 )
animation = "Square"
frame = 13
playing = true
centered = false
flip_h = true
flip_v = true

[node name="AnimatedSpriteDiamond" type="AnimatedSprite" parent="Canvas/CenterContainer"]
scale = Vector2( 10, 10 )
frames = ExtResource( 6 )
animation = "Diamond"
frame = 5
playing = true
centered = false
flip_v = true
